src/components/dashboard/dashboard.css
#components-layout-demo-top-side-2 .logo {
    width: 120px;
    height: 31px;
    background: rgba(255,255,255,.2);  
    margin: 16px 28px 16px 0;
    float: left;
  }
  .ant-layout-content {
    height: 100vh;
}
button.ant-btn.wkonlogout {
  float: right;
  margin-top: 17px;
  font-weight: 500;
  background: transparent;
  color: #fff;
  padding-bottom: 3px;
  border: 2px solid #fff;
  border-radius: 50px;
}

  .header img{
    width: 85px !important;
}

.username{
  color: rgb(255, 255, 255);
  font-family: 'Lato', sans-serif;
  font-size: 17px;
  text-transform: capitalize;
  margin-left: 11em;
}
.header {
 
  padding: 0 50px 0 25px;
  
}

